Implement C++ KMS Master Key for aws-encryption-sdk-c (#62)
* Implement C++ KMS Master Key for aws-encryption-sdk-c

* Comments from PR

* Add support for multi-keys in KMS

* More comments from PR

* Rename KMSMasterKey to Keyring

* Rename files from master key to keyring

* Polishing

* Comments from the PR
https://github.com/awslabs/aws-encryption-sdk-c/pull/62

* Add support of KMS multi-key encryption

* Self deallocate KMS keyring

* Comments from PR

https://github.com/awslabs/aws-encryption-sdk-c/pull/62#

* Clean-up clean_up aws_list only if it was initialized

Also fix a test

* Fix Windows build

* Set the correct path for aws-sdk-cpp in codebuild-test.sh

* Extend cmake find_package to try building using aws-cpp-sdk-core
aws-cpp-sdk-kms if AWSSDK does not exist

* Add FORCE_KMS_KEYRING_BUILD option

* Add AWS_ENC_SDK_END_TO_END_TESTS option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,11 +46,6 @@ endif()
 
 find_package(aws-c-common CONFIG REQUIRED)
 
-# C++ SDK
-
-find_package(aws-cpp-sdk-core CONFIG)
-find_package(aws-cpp-sdk-kms CONFIG)
-
 if(USE_ASM)
     CHECK_CXX_SOURCE_COMPILES("
     int main() {
@@ -185,6 +180,8 @@ file(GLOB UNIT_TEST_SRC "tests/unit/*.c")
 file(GLOB UNIT_TEST_HDRS "tests/*.h")
 file(GLOB UNIT_TESTS ${TEST_HDRS} ${TEST_SRC})
 file(GLOB TEST_LIB "tests/lib/*.c")
+
+add_subdirectory(aws-encryption-sdk-cpp)
 
 include(CTest)
 enable_testing()
