Raw rsa keyring decrypt (#81)
* Adding raw_rsa_keyring files

* Added test vectors for RSA_OAEP_SHA1_MGF1 and RSA_OAEP_SHA256_MGF1 and other changes

* Fixed  cipher.c

* Added comments

* Fix PR#81 as per suggestions from review

* enum name change and addition of AWS_CRYPTOSDK_ prefix

* Added doc comments for the APIs

* Uses struct aws_string instead of uint8_t

* Changed variable names and doc comments to indicate PEM format

* Merged the cleanup between the success and error paths, created function for rsa_padding lookup

* Changed const uint8_t * to const char * for C string

* Added additional malformed test vectors

* Fixed memory leak in EVP_PKEY while using PEM_read_bio_PrivateKey() function

* max capacity for the unencrypted datakey buffer approx. to two-third the size of RSA key in PEM format

* Added comment to describe wrong_raw_rsa_keyring_tv_private_key

* Moving init of plain buffer from raw_rsa_keyring.c to cipher.c

* Fixed typo: struct aws_allocator in cipher.c and cipher.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -228,6 +228,7 @@ add_test(enc_context ${VALGRIND} ${CMAKE_CURRENT_BINARY_DIR}/unit-test-suite enc
 add_test(encrypt ${VALGRIND} ${CMAKE_CURRENT_BINARY_DIR}/unit-test-suite encrypt)
 add_test(hkdf ${VALGRIND} ${CMAKE_CURRENT_BINARY_DIR}/unit-test-suite hkdf)
 add_test(raw_aes_keyring ${VALGRIND} ${CMAKE_CURRENT_BINARY_DIR}/unit-test-suite raw_aes_keyring)
+add_test(raw_rsa_keyring ${VALGRIND} ${CMAKE_CURRENT_BINARY_DIR}/unit-test-suite raw_rsa_keyring)
 add_test(multi_keyring ${VALGRIND} ${CMAKE_CURRENT_BINARY_DIR}/unit-test-suite multi_keyring)
 add_test(signature ${VALGRIND} ${CMAKE_CURRENT_BINARY_DIR}/unit-test-suite signature)
 
