Use the ninja build system when building dependencies
This means that our dependency build will automatically select an appropriate
number of parallel jobs to run

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   pre_build:
     commands:
       - apt-get update
-      - env DEBIAN_FRONTEND=noninteractive apt-get -y install build-essential cmake git libssl-dev libcurl4-openssl-dev zlib1g-dev awscli valgrind
+      - env DEBIAN_FRONTEND=noninteractive apt-get -y install build-essential cmake git libssl-dev libcurl4-openssl-dev zlib1g-dev awscli valgrind ninja-build
   build:
     commands:
       - build-tools/bin/codebuild-test.sh
