Add codebuild logic for GCC 4.8 x86/x64 builds
This adds dockerfiles and codebuild buildspecs for a GCC 4.8 x86/x64 build on
Ubuntu Trusty. These are meant to serve as a template for future CI
configurations; in a future change, the existing codebuild logic under
build-tools/bin and buildspec.yml in the root will be merged with this logic
and moved into the codebuild directory as well.

--- a/codebuild/trusty-gcc4x-x64.yml
+++ b/codebuild/trusty-gcc4x-x64.yml
@@ -16,5 +16,5 @@ version: 0.2
 phases:
   build:
     commands:
-      - .\codebuild\common-windows.bat -G "Visual Studio 14 2015 Win64"
+      - codebuild/bin/codebuild-test.sh
 
