--- a/codebuild/trusty-gcc4x-x86.yml
+++ b/codebuild/trusty-gcc4x-x86.yml
@@ -16,5 +16,5 @@ version: 0.2
 phases:
   build:
     commands:
-      - .\codebuild\common-windows.bat -G "Visual Studio 14 2015 Win64"
+      - codebuild/bin/codebuild-test.sh
 
