Enable valgrind suppresions on the preexisting Linux CI build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ set(BUILD_SHARED_LIBS FALSE
 option(PERFORM_HEADER_CHECK "Performs compile-time checks that each header can be included independently. Requires a C++ compiler.")
 
 option(VALGRIND_TEST_SUITE "Run the test suite under valgrind")
-set(VALGRIND_OPTIONS "" CACHE STRING "Additional options to pass to valgrind")
+set(VALGRIND_OPTIONS "--suppressions=${CMAKE_CURRENT_SOURCE_DIR}/valgrind.suppressions" CACHE STRING "Additional options to pass to valgrind")
 
 if (VALGRIND_TEST_SUITE)
     set(VALGRIND valgrind --error-exitcode=42 --errors-for-leak-kinds=definite,possible --leak-check=full ${VALGRIND_OPTIONS})
