Increase KMS timeouts in the DefaultRegionalClientSupplier when running valgrind tests
The default connection timeout (1s) is too short for running under valgrind on
codebuild - tests fail intermittently. This change bumps up those timeouts, but
only when building with valgrind testing enabled.

--- a/aws-encryption-sdk-cpp/CMakeLists.txt
+++ b/aws-encryption-sdk-cpp/CMakeLists.txt
@@ -82,6 +82,10 @@ if (BUILD_AWS_ENC_SDK_CPP)
     )
     install(EXPORT aws-encryption-sdk-cpp DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/aws-encryption-sdk/cmake/")
 
+    if (VALGRIND_TEST_SUITE)
+        target_compile_definitions(aws-encryption-sdk-cpp PRIVATE VALGRIND_TESTS=1)
+    endif()
+
     include(CTest)
     enable_testing()
 
