--- a/codebuild/windows-msvc-2015-x86.yml
+++ b/codebuild/windows-msvc-2015-x86.yml
@@ -17,4 +17,4 @@ phases:
   build:
     commands:
       - .\codebuild\common-windows.bat -G "Visual Studio 14 2015"
-
+      - .\codebuild\common-windows.bat -DBUILD_SHARED_LIBS=ON -G "Visual Studio 14 2015"
