--- a/aws-encryption-sdk-cpp/CMakeLists.txt
+++ b/aws-encryption-sdk-cpp/CMakeLists.txt
@@ -13,6 +13,10 @@
 # limitations under the License.
 #
 
+set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${PROJECT_SOURCE_DIR}/cmake")
+include(AwsCFlags)
+include(InstallLogic)
+
 # This is useful for CodeBuild tests since we want to avoid cases where KMS dependencies are missing and
 # we are not building aws-encryption-sdk-cpp.
 option(FORCE_KMS_KEYRING_BUILD "Fail build if KMS Keyring dependencies are not satisfied")
@@ -47,17 +51,9 @@ endif()
 
 
 file(GLOB AWS_CRYPTOSDK_CPP_HEADERS
-        # Headers subject to API/ABI stability guarantees
-        "include/aws/cryptosdk/*.h"
-        # Headers not subject to API stability (but subject to ABI stability)
-        # These typically include internal macros and helpers used in static inline functions
-        "include/aws/cryptosdk/private/*.h"
-        )
-
-file(GLOB CORE_CPP_HEADERS
-        ${CORE_HEADERS}
-        ${AWS_CRYPTOSDK_CPP_HEADERS}
-        )
+    # Headers subject to API/ABI stability guarantees
+    "${CMAKE_CURRENT_SOURCE_DIR}/include/aws/cryptosdk/*.h"
+)
 
 file(GLOB AWS_CRYPTOSDK_CPP_SRC "source/*.cpp")
 
@@ -65,6 +61,14 @@ if (BUILD_AWS_ENC_SDK_CPP)
     set(AWS_ENC_SDK_CPP "aws-encryption-sdk-cpp")
     add_library(aws-encryption-sdk-cpp ${LIBTYPE} ${CORE_CPP_HEADERS} ${AWS_CRYPTOSDK_CPP_SRC})
     set_property(TARGET aws-encryption-sdk-cpp PROPERTY CXX_STANDARD 11)
+    # -fvisibility=hidden appears incompatible with the GNU C++ library; this is because in std::basic_string
+    # there is a templated (const) static variable, which can be instantiated in multiple libraries, and which
+    # is later compared by-address in the basic_string destructor.
+    # Normally, the dynamic linker will resolve to a single instance of this static, but -fvisibility=hidden
+    # makes our instantiation a local symbol (instead of 'global unique'), which means we end up with multiple
+    # instances, and crash when a string is passed across library boundaries and then destroyed.
+    aws_set_common_properties(aws-encryption-sdk-cpp NO_VISIBILITY_HIDDEN)
+
     target_include_directories(aws-encryption-sdk-cpp PUBLIC
             $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/aws-encryption-sdk-cpp/include>
             $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -73,14 +77,9 @@ if (BUILD_AWS_ENC_SDK_CPP)
             $<INSTALL_INTERFACE:include>
             )
     set_target_properties(aws-encryption-sdk-cpp PROPERTIES LINKER_LANGUAGE CXX)
-    target_link_libraries(aws-encryption-sdk-cpp AWS::aws-c-common aws-cpp-sdk-kms aws-cpp-sdk-core aws-encryption-sdk)
-    install(
-            TARGETS aws-encryption-sdk-cpp EXPORT aws-encryption-sdk-cpp
-            ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
-            LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
-            COMPONENT library
-    )
-    install(EXPORT aws-encryption-sdk-cpp DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/aws-encryption-sdk/cmake/")
+    target_link_libraries(aws-encryption-sdk-cpp PUBLIC AWS::aws-c-common aws-cpp-sdk-kms aws-cpp-sdk-core aws-encryption-sdk)
+    aws_install_target(TARGET aws-encryption-sdk-cpp HEADERS ${AWS_CRYPTOSDK_CPP_HEADERS} HEADER_ROOTS ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
 
     if (VALGRIND_TEST_SUITE)
         target_compile_definitions(aws-encryption-sdk-cpp PRIVATE VALGRIND_TESTS=1)
@@ -92,8 +91,8 @@ if (BUILD_AWS_ENC_SDK_CPP)
     file(GLOB TEST_LIB "tests/lib/*.cpp")
     file(GLOB TEST_LIB_HEADERS "tests/lib/*.h")
 
-    add_library(testlibcpp EXCLUDE_FROM_ALL ${TEST_LIB_HEADERS} ${TEST_LIB})
-    target_link_libraries(testlibcpp aws-encryption-sdk-cpp testlib)
+    add_library(testlibcpp ${LIBTYPE} EXCLUDE_FROM_ALL ${TEST_LIB_HEADERS} ${TEST_LIB})
+    target_link_libraries(testlibcpp PUBLIC aws-encryption-sdk-cpp testlib)
     set_target_properties(testlibcpp PROPERTIES CXX_STANDARD 11 C_STANDARD 99)
     target_include_directories(testlibcpp PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/tests/lib
             ${PROJECT_SOURCE_DIR}/tests/lib $<INSTALL_INTERFACE:include>)
