Implement keyring trace (#193)
* New data types for keyring trace and simple test

* Put a keyring trace list in the session and pass it to CMMs through materials

* Added keyring trace to AES, RSA, and KMS keyrings

Tests have all been updated for AES and RSA keyrings. Everything in
C is building and passing.

Integration tests for KMS keyrings are in progress, and unit test
changes are not started yet.

Keyring trace has NOT yet been implemented for multi-keyring, though
it has been implemented for the test_keyring that it uses in the tests.

KMS keyring encrypt side currently uses suboptimal implementation that
can modify keyring trace even when it aborts from on_encrypt early.

* Fix integration tests

* Fix KMS keyring unit tests

Also include keyring trace header in materials.h instead of all the other places

* refactor AES and RSA trace tests touse assert_keyring_trace_item

* rename keyring_trace_item to keyring_trace_record

* KMS keyring encrypt uses local list for trace

* Implement trace in multi-keyring & tests

* Add doc comments to keyring_trace.h

* Add missing exports include

* add missing include

* don't carry error codes over from one C++ test to another

also fix whitespace in testutil.h

* Add missing return and cmake change to catch missing returns

-cmake check only works in C for the moment, not C++
-also tiny bit of test code cleanup

* add another missing return statement

* fix whitespace

* changes from PR

* Move trace from request to materials objects

It first gets built in materials objects then transferred to
session after call to CMM.

* Don't duplicate static strings

Also added missing TESTLIB_API

* tiny build fixes

one more missing TESTLIB_API and unused variable

* Add copy functionality for keyring trace

* Moved list copy and transfer functions to new list_utils.[ch]

Also added the files I forgot to on the last commit. (doh!)

* fix on list copy beca

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -96,6 +96,7 @@ aws_add_test(signature ${VALGRIND} ${CMAKE_CURRENT_BINARY_DIR}/unit-test-suite s
 aws_add_test(trailing_sig ${VALGRIND} ${CMAKE_CURRENT_BINARY_DIR}/unit-test-suite trailing_sig)
 aws_add_test(local_cache ${VALGRIND} ${CMAKE_CURRENT_BINARY_DIR}/unit-test-suite local_cache)
 aws_add_test(caching_cmm ${VALGRIND} ${CMAKE_CURRENT_BINARY_DIR}/unit-test-suite caching_cmm)
+aws_add_test(keyring_trace ${VALGRIND} ${CMAKE_CURRENT_BINARY_DIR}/unit-test-suite keyring_trace)
 
 set(TEST_DATA ${CMAKE_CURRENT_SOURCE_DIR}/data)
 
