--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -15,15 +15,22 @@
 option(AWS_ENC_SDK_EXAMPLES "Enable building of examples")
 
 if (AWS_ENC_SDK_EXAMPLES)
-    message(STATUS "Building code examples")
-    find_package(AWSSDK QUIET COMPONENTS core kms)
-    file(GLOB example_sources FOLLOW_SYMLINKS *.cpp)
-    foreach (source ${example_sources})
-        get_filename_component(EXAMPLE_NAME ${source} NAME_WE)
-        add_executable(${EXAMPLE_NAME} ${source})
-        target_link_libraries(${EXAMPLE_NAME} PRIVATE AWS::aws-c-common aws-cpp-sdk-kms aws-cpp-sdk-core aws-encryption-sdk aws-encryption-sdk-cpp)
-        set_target_properties(${EXAMPLE_NAME} PROPERTIES CXX_STANDARD 11 C_STANDARD 99)
-    endforeach ()
+  message(STATUS "Building code examples")
+  find_package(AWSSDK QUIET COMPONENTS core kms)
+  file(GLOB example_cpp_sources FOLLOW_SYMLINKS *.cpp)
+  file(GLOB example_c_sources FOLLOW_SYMLINKS *.c)
+  foreach (source ${example_cpp_sources})
+    get_filename_component(EXAMPLE_NAME ${source} NAME_WE)
+    add_executable(${EXAMPLE_NAME} ${source})
+    target_link_libraries(${EXAMPLE_NAME} PRIVATE AWS::aws-c-common aws-cpp-sdk-kms aws-cpp-sdk-core aws-encryption-sdk aws-encryption-sdk-cpp)
+    set_target_properties(${EXAMPLE_NAME} PROPERTIES CXX_STANDARD 11 C_STANDARD 99)
+  endforeach ()
+  foreach (source ${example_c_sources})
+    get_filename_component(EXAMPLE_NAME ${source} NAME_WE)
+    add_executable(${EXAMPLE_NAME} ${source})
+    target_link_libraries(${EXAMPLE_NAME} PRIVATE AWS::aws-c-common aws-encryption-sdk)
+    set_target_properties(${EXAMPLE_NAME} PROPERTIES C_STANDARD 99)
+  endforeach ()
 else ()
-    message(STATUS "Code examples not built")
+  message(STATUS "Code examples not built")
 endif ()
